<resources>
    <string name="app_name">List Novel Tere Liye</string>
    <string name="heroes_name">List Buku</string>
    <string name="description">Deskripsi</string>
    <string name="about">About</string>
    <string name="name">Melinda Sari</string>
    <string name="email">a546b4nx2463@bangkit.academy</string>
    <string name="label_buku">Judul Buku :</string>
    <string name="label_penerbit">Penerbit :</string>
    <string name="label_terbit">Terbit :</string>
    <string name="label_genre">Genre :</string>
    <string name="label_halaman">Tebal Buku :</string>
    <string name="label_desc">Deskripsi :</string>
    <string name="desc_image_book">gambar-sampul-buku</string>
    <string name="sample_input">Sample Input</string>
    <string-array name="data_name">
        <item>Bintang</item>
        <item>Bulan</item>
        <item>Bumi</item>
        <item>Hello</item>
        <item>Hujan</item>
        <item>Lumpu</item>
        <item>Negeri Diujung Tanduk</item>
        <item>Negeri Para Bedebah</item>
        <item>Pergi</item>
        <item>Pulang</item>
        <item>Rindu</item>
        <item>Teruslah Bodoh Jangan Pintar</item>
        <item>Yang Telah Lama Pergi</item>
    </string-array>
    <string-array name="data_penerbit">
        <item>Gramedia Pustaka Utama</item>
        <item>Gramedia Pustaka Utama</item>
        <item>Gramedia Pustaka Utama</item>
        <item>Gramedia Pustaka Utama</item>
        <item>Gramedia Pustaka Utama</item>
        <item>Gramedia Pustaka Utama</item>
        <item>Gramedia Pustaka Utama</item>
        <item>Gramedia Pustaka Utama</item>
        <item>Gramedia Pustaka Utama</item>
        <item>Gramedia Pustaka Utama</item>
        <item>Gramedia Pustaka Utama</item>
        <item>Sabakgrip</item>
        <item>GSabakgrip</item>
    </string-array>
    <string-array name="data_terbit">
        <item>2017</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2016</item>
        <item>2021</item>
        <item>2013</item>
        <item>2012</item>
        <item>2018</item>
        <item>2015</item>
        <item>2014</item>
        <item>2024</item>
        <item>2023</item>
    </string-array>
    <string-array name="data_genre">
        <item>Fiksi, Fantasi, Petualangan</item>
        <item>Fiksi, Fantasi, Petualangan</item>
        <item>Fiksi, Fantasi, Petualangan</item>
        <item>Romance</item>
        <item>Fiksi, Fiksi Ilmiah, Drama</item>
        <item>Fiksi, Fantasi, Petualangan</item>
        <item>Fiksi, Thriller, Politik</item>
        <item>Fiksi, Thriller, Politik</item>
        <item>iksi, Drama, Aksi</item>
        <item>Fiksi, Drama, Aksi</item>
        <item>Fiksi, Drama, Sejarah</item>
        <item>Slice Of Life</item>
        <item>Action</item>
    </string-array>
    <string-array name="data_halaman">
        <item>392 Halaman</item>
        <item>400 Halaman</item>
        <item>440 Halaman</item>
        <item>444 Halaman</item>
        <item>320 Halaman</item>
        <item>384 Halaman</item>
        <item>360 Halaman</item>
        <item>440 Halaman</item>
        <item>456 Halaman</item>
        <item>400 Halaman</item>
        <item>544 Halaman</item>
        <item>373 Halaman</item>
        <item>442 Halaman</item>
    </string-array>
</resources>